--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classname": "0.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.3",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.8.3",
     "react-scripts": "^2.1.8"
   },
