--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "classname": "0.0.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "react": "^16.8.3",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.8.3",
