--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
     "classname": "0.0.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.8.3",
