--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
     "classname": "0.0.0",
-    "jquery": "^3.4.1",
-    "node-sass": "^4.12.0",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
-    "react-toastify": "^5.3.1"
+    "react-scripts": "^3.4.1",
+    "react-toastify": "^5.3.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
