Created add web service and page layout

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ yarn-error.log*
 FM_Template_Vesta_SSH
 Vesta_CPanel_Tabs_SSH
 .vscode
+
+FM_Template_Vesta_SSH
+index_html_mock_main_nav
+Vesta_CPanel_Tabs_SSH
+new
