--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-toastify": "^5.3.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validate.js": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
