--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.18.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.3.1",
     "classname": "0.0.0",
     "jquery": "^3.5.1",
@@ -19,6 +19,7 @@
     "react": "^16.10.2",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.10.2",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
