--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.3.1",
     "classname": "0.0.0",
+    "dayjs": "^1.10.7",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.15.0",
