--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.10.2",
     "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
