--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "file_manager",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-control-panel",
+  "author": "Alexander Osinskii",
+  "email": "alexanderosinskii@gmail.com",
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
