--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.10.7",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "perfect-scrollbar": "^1.5.3",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
@@ -35,7 +36,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run delete-remote-js && npm run delete-remote-css && npm run delete-remote-html && npm run move-local-js && npm run move-local-css && npm run move-local-html && clear",
+    "delete-remote-js": "ssh root@82.146.58.166 'rm -rf /usr/local/vesta/web/static/js' ",
+    "delete-remote-css": "ssh root@82.146.58.166 'rm -rf /usr/local/vesta/web/static/css'",
+    "delete-remote-html": "ssh root@82.146.58.166 'rm -rf /usr/local/vesta/web/static/index.html'",
+    "move-local-js": "scp -r build/static/js root@82.146.58.166:/usr/local/vesta/web/static",
+    "move-local-css": "scp -r build/static/css root@82.146.58.166:/usr/local/vesta/web/static",
+    "move-local-html": "scp -r build/index.html root@82.146.58.166:/usr/local/vesta/web/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
